# nonogram-engine

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
.kiro/settings/rules/: design-review.md
.kiro/specs/nonogram-cli/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/nonogram-core/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/nonogram-format/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/nonogram-maker/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/nonogram-wasm/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/web-app/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
apps/cli/: Cargo.toml
apps/cli/src/: commands.rs  error.rs  io.rs  main.rs
apps/cli/src/commands/: convert.rs  grid_to_puzzle.rs  solve.rs  template.rs
apps/cli/tests/: integration_test.rs
apps/web/: README.md  eslint.config.js  package.json  vite.config.ts
core/: Cargo.toml
core/src/: error.rs  lib.rs  solver.rs  types.rs
crates/nonogram-core/: Cargo.toml
crates/nonogram-format/: Cargo.toml
crates/nonogram-wasm/: Cargo.toml
crates/nonogram-wasm/src/: lib.rs
docs/: 01-line-solver.md  02-arc-consistency.md  03-probing-backtracking.md  blue-print.md  figure_converter_spec.md  fp2-implementation-plan.md  naming-conventions.md  nonogram-maker.md  repository-plan.md  solver-algorithms-survey.md
wasm/: Cargo.toml
(+48 files in other folders)
