[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nonokit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
nonogram-core = { path = "../../crates/nonogram-core" }
nonogram-format = { path = "../../crates/nonogram-format" }

[dev-dependencies]
tempfile = "3"
