[package]
name = "nonogram-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
nonogram-core = { path = "../nonogram-core" }
nonogram-format = { path = "../nonogram-format" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
